--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
   </header>
 
   <main>
-    <section>
-
+    <section class="jumbotron">
+      <div class="container-cst-small d-flex flex-column align-items-center">
+        <div>IMG</div>
+        <div>START BOOTSTRAP</div>
+        <div>---- icon ----</div>
+        <div>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</div>
+      </div>
     </section>
 
     <section>
