--- a/index.html
+++ b/index.html
@@ -23,22 +23,40 @@
   </header>
 
   <main>
+    <!-- JUMBOTRON -->
     <section class="jumbotron">
-      <div class="container-cst-small d-flex flex-column align-items-center">
+      <div class="container-cst-small text-center">
         <div>IMG</div>
-        <div>START BOOTSTRAP</div>
+        <h1>START BOOTSTRAP</h1>
         <div>---- icon ----</div>
         <div>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</div>
       </div>
     </section>
+    <!-- end JUMBOTRON -->
 
+    <!-- PORTFOLIO -->
+    <section>
+      <div class="container-md text-center debug">
+        <h2>PORTFOLIO</h2>
+        <div>---- icon ----</div>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3">
+          <div class="col debug d-flex justify-content-center align-items-center">1</div>
+          <div class="col debug d-flex justify-content-center align-items-center">2</div>
+          <div class="col debug d-flex justify-content-center align-items-center">3</div>
+          <div class="col debug d-flex justify-content-center align-items-center">4</div>
+          <div class="col debug d-flex justify-content-center align-items-center">5</div>
+          <div class="col debug d-flex justify-content-center align-items-center">6</div>
+        </div>
+      </div>
+    </section>
+    <!-- end PORTFOLIO -->
+
+    <!-- ABOUT -->
     <section>
 
     </section>
+    <!-- ABOUT -->
 
-    <section>
-
-    </section>
 
     <section>
 
