[add]: margin jumbotron, portfolio, about

--- a/index.html
+++ b/index.html
@@ -24,21 +24,25 @@
 
   <main>
     <!-- JUMBOTRON -->
-    <section class="jumbotron">
-      <div class="container-cst-small text-center">
-        <div>IMG</div>
-        <h1>START BOOTSTRAP</h1>
-        <div>---- icon ----</div>
-        <div>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</div>
+    <section class="py-3 py-md-4">
+      <div class="container-jumbotron">
+        <div class="container-fluid text-center">
+          <div>IMG</div>
+          <h1>START BOOTSTRAP</h1>
+          <div>---- icon ----</div>
+          <div>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</div>
+        </div>
       </div>
     </section>
     <!-- end JUMBOTRON -->
 
     <!-- PORTFOLIO -->
-    <section>
-      <div class="container-md text-center debug">
-        <h2>PORTFOLIO</h2>
-        <div>---- icon ----</div>
+    <section class="py-4 py-md-5">
+      <div class="container-md text-center">
+        <div class="w-100 text-center">
+          <h2>PORTFOLIO</h2>
+          <div>---- icon ----</div>
+        </div>
         <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3">
           <div class="col debug d-flex justify-content-center align-items-center">1</div>
           <div class="col debug d-flex justify-content-center align-items-center">2</div>
@@ -52,8 +56,20 @@
     <!-- end PORTFOLIO -->
 
     <!-- ABOUT -->
-    <section>
-
+    <section class="pt-4 pb-3 pt-md-5 pb-md-4">
+      <div class="container-cst">
+        <div class="container-fluid ">
+          <div class="w-100 text-center">
+            <h2>ABOUT</h2>
+            <div>---- icon ----</div>
+          </div>
+          <div class="row row-cols-1 row-cols-md-2 text-start">
+            <div class="col debug">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt facilis repellat tenetur quibusdam iusto alias nihil, et quia, ducimus ipsa eius explicabo delectus tempore quo dicta eum saepe voluptatibus debitis ad esse, commodi sequi. Pariatur maxime quaerat, iste voluptate culpa sed esse reiciendis explicabo nemo recusandae sunt ad, eaque expedita?</div>
+            <div class="col debug">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatem alias velit commodi eaque exercitationem, nulla necessitatibus. Excepturi veritatis odio aut, magnam ratione, beatae iure veniam molestias nulla non, officiis provident quaerat ducimus? Et voluptate necessitatibus labore! Totam, sed quas veniam voluptas eveniet non cumque corrupti nemo, nulla ab ipsa!</div>
+          </div>
+          <button class="btn btn-outline-light">Ic Download</button>
+        </div>
+      </div>
     </section>
     <!-- ABOUT -->
 
