[add]: contact me

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
     <!-- JUMBOTRON -->
     <section class="py-3 py-md-4">
       <div class="container-jumbotron">
-        <div class="container-fluid text-center">
-          <div>IMG</div>
-          <h1>START BOOTSTRAP</h1>
-          <div>---- icon ----</div>
-          <div>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</div>
+        <div class="container-fluid">
+          <div class="text-center">
+            <div>IMG</div>
+            <h1>START BOOTSTRAP</h1>
+            <div>---- icon ----</div>
+            <div>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</div>
+          </div>
         </div>
       </div>
     </section>
@@ -39,7 +41,7 @@
     <!-- PORTFOLIO -->
     <section class="py-4 py-md-5">
       <div class="container-md text-center">
-        <div class="w-100 text-center">
+        <div class="text-center">
           <h2>PORTFOLIO</h2>
           <div>---- icon ----</div>
         </div>
@@ -58,8 +60,8 @@
     <!-- ABOUT -->
     <section class="pt-4 pb-3 pt-md-5 pb-md-4">
       <div class="container-cst">
-        <div class="container-fluid ">
-          <div class="w-100 text-center">
+        <div class="container-fluid">
+          <div class="text-center">
             <h2>ABOUT</h2>
             <div>---- icon ----</div>
           </div>
@@ -67,17 +69,41 @@
             <div class="col debug">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt facilis repellat tenetur quibusdam iusto alias nihil, et quia, ducimus ipsa eius explicabo delectus tempore quo dicta eum saepe voluptatibus debitis ad esse, commodi sequi. Pariatur maxime quaerat, iste voluptate culpa sed esse reiciendis explicabo nemo recusandae sunt ad, eaque expedita?</div>
             <div class="col debug">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatem alias velit commodi eaque exercitationem, nulla necessitatibus. Excepturi veritatis odio aut, magnam ratione, beatae iure veniam molestias nulla non, officiis provident quaerat ducimus? Et voluptate necessitatibus labore! Totam, sed quas veniam voluptas eveniet non cumque corrupti nemo, nulla ab ipsa!</div>
           </div>
-          <button class="btn btn-outline-light">Ic Download</button>
+          <div class="text-center">
+            <button class="btn btn-outline-light">Ic Download</button>
+          </div>
         </div>
       </div>
     </section>
-    <!-- ABOUT -->
+    <!-- end ABOUT -->
 
+    <!-- CONTACT ME -->
+    <section class="pt-4 pb-3 pt-md-5 pb-md-4">
+      <div class="container-cst">
+        <div class="container-fluid">
+          <div class="text-center">
+            <h2>CONTACT ME</h2>
+            <div>---- icon ----</div>
+          </div>
+          <div class="debug">
+            FORM
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- CONTACT ME -->
+  </main>
 
+  <footer>
+    <section>
+      <div class="container-md">
+
+      </div>
+    </section>
     <section>
 
     </section>
-  </main>
+  </footer>
   
 </body>
 </html>
