--- a/index.html
+++ b/index.html
@@ -95,12 +95,17 @@
   </main>
 
   <footer>
-    <section>
+    <section class="footer-top">
       <div class="container-md">
-
+        <div class="row row-cols-1 row-cols-md-3">
+          <div class="col debug">1</div>
+          <div class="col debug">2</div>
+          <div class="col debug">3</div>
+        </div>
       </div>
     </section>
-    <section>
+
+    <section class="footer-bottom">
 
     </section>
   </footer>
