--- a/index.html
+++ b/index.html
@@ -95,18 +95,18 @@
   </main>
 
   <footer>
-    <section class="footer-top">
+    <section class="footer-top py-4">
       <div class="container-md">
         <div class="row row-cols-1 row-cols-md-3">
-          <div class="col debug">1</div>
-          <div class="col debug">2</div>
-          <div class="col debug">3</div>
+          <div class="col text-center debug">1</div>
+          <div class="col text-center debug">2</div>
+          <div class="col text-center debug">3</div>
         </div>
       </div>
     </section>
 
-    <section class="footer-bottom">
-
+    <section class="footer-bottom text-center pt-4">
+      <span>Copyright X Your Website 2019</span>
     </section>
   </footer>
   
