--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- FONTAWESOME -->
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css' integrity='sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==' crossorigin='anonymous'/>
+
   <!-- BOOTSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
@@ -15,37 +18,47 @@
 </head>
 <body>
   <header class="text-white">
-    <div class="container-md h-100 d-flex justify-content-between align-items-center">
-      <div>START BOOSTRAP</div>
-      <div class="d-md-none">ICON</div>
-      <nav class="d-none d-md-block">PORTFOLIO ABOUT CONTACT</nav>
+    <div class="container h-100">
+      <div class="row h-100 d-flex align-items-center row-cols-2">
+        <div class="col">START BOOSTRAP</div>
+        <div class="col text-end">
+          <div class="d-md-none">ICON</div>
+          <nav class="d-none d-md-block">PORTFOLIO ABOUT CONTACT</nav>
+        </div>
+      </div>
     </div>
   </header>
 
   <main>
     <!-- JUMBOTRON -->
-    <section class="py-3 py-md-4">
-      <div class="container-jumbotron">
-        <div class="container-fluid">
-          <div class="text-center">
-            <div>IMG</div>
-            <h1>START BOOTSTRAP</h1>
-            <div>---- icon ----</div>
-            <div>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</div>
-          </div>
+    <section id="jumbotron" class="bg-green text-white py-3 py-md-4">
+      <div class="container h-100 d-flex flex-column justify-content-center align-items-center">
+        <img src="img/avatar.svg" alt="avatar">
+        <h1 class="text-uppercase fw-bold my-3">START BOOTSTRAP</h1>
+        <div class="star position-relative w-100 text-center">
+          <div class="line-star before"></div>
+          <i class="fa-solid fa-star"></i>
+          <div class="line-star after"></div>
         </div>
+        <span class="py-3">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
       </div>
     </section>
     <!-- end JUMBOTRON -->
 
     <!-- PORTFOLIO -->
-    <section class="py-4 py-md-5">
-      <div class="container-md text-center">
-        <div class="text-center">
+    <section id="portfolio" class="py-4 py-md-5">
+      <div class="container text-center">
+        <div class="section-top text-center">
           <h2>PORTFOLIO</h2>
-          <div>---- icon ----</div>
+
+          <div class="star position-relative w-100 text-center">
+            <div class="line-star before"></div>
+            <i class="fa-solid fa-star"></i>
+            <div class="line-star after"></div>
+          </div>
+
         </div>
-        <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
           <div class="col debug d-flex justify-content-center align-items-center">1</div>
           <div class="col debug d-flex justify-content-center align-items-center">2</div>
           <div class="col debug d-flex justify-content-center align-items-center">3</div>
@@ -58,12 +71,18 @@
     <!-- end PORTFOLIO -->
 
     <!-- ABOUT -->
-    <section class="pt-4 pb-3 pt-md-5 pb-md-4">
+    <section id="about" class="bg-green text-white pt-4 pb-3 pt-md-5 pb-md-4">
       <div class="container-cst">
         <div class="container-fluid">
-          <div class="text-center">
+          <div class="section-top text-center">
             <h2>ABOUT</h2>
-            <div>---- icon ----</div>
+
+            <div class="star position-relative w-100 text-center">
+              <div class="line-star before"></div>
+              <i class="fa-solid fa-star"></i>
+              <div class="line-star after"></div>
+            </div>
+  
           </div>
           <div class="row row-cols-1 row-cols-md-2 text-start">
             <div class="col debug">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt facilis repellat tenetur quibusdam iusto alias nihil, et quia, ducimus ipsa eius explicabo delectus tempore quo dicta eum saepe voluptatibus debitis ad esse, commodi sequi. Pariatur maxime quaerat, iste voluptate culpa sed esse reiciendis explicabo nemo recusandae sunt ad, eaque expedita?</div>
@@ -78,15 +97,23 @@
     <!-- end ABOUT -->
 
     <!-- CONTACT ME -->
-    <section class="pt-4 pb-3 pt-md-5 pb-md-4">
+    <section id="contact-me" class="pt-4 pb-3 pt-md-5 pb-md-4">
       <div class="container-cst">
         <div class="container-fluid">
-          <div class="text-center">
+          <div class="section-top text-center">
             <h2>CONTACT ME</h2>
-            <div>---- icon ----</div>
+
+            <div class="star position-relative w-100 text-center">
+              <div class="line-star before"></div>
+              <i class="fa-solid fa-star"></i>
+              <div class="line-star after"></div>
+            </div>
+
           </div>
-          <div class="debug">
-            FORM
+          <div class="container-cst">
+            <div class="debug">
+              FORM
+            </div>
           </div>
         </div>
       </div>
@@ -96,7 +123,7 @@
 
   <footer>
     <section class="footer-top py-4">
-      <div class="container-md">
+      <div class="container">
         <div class="row row-cols-1 row-cols-md-3">
           <div class="col text-center debug">1</div>
           <div class="col text-center debug">2</div>
@@ -106,7 +133,7 @@
     </section>
 
     <section class="footer-bottom text-center pt-4">
-      <span>Copyright X Your Website 2019</span>
+      <span class="pt-2">Copyright X Your Website 2019</span>
     </section>
   </footer>
   
