--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="container h-100 d-flex flex-column justify-content-center align-items-center">
         <img src="img/avatar.svg" alt="avatar">
         <h1 class="text-uppercase fw-bold my-3">START BOOTSTRAP</h1>
-        <div class="star position-relative w-100 text-center">
+        <div class="star position-relative w-100 text-center py-2">
           <div class="line-star before"></div>
           <i class="fa-solid fa-star"></i>
           <div class="line-star after"></div>
@@ -51,7 +51,7 @@
         <div class="section-top text-center">
           <h2>PORTFOLIO</h2>
 
-          <div class="star position-relative w-100 text-center">
+          <div class="star position-relative w-100 text-center py-2">
             <div class="line-star before"></div>
             <i class="fa-solid fa-star"></i>
             <div class="line-star after"></div>
@@ -59,12 +59,66 @@
 
         </div>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
-          <div class="col debug d-flex justify-content-center align-items-center">1</div>
-          <div class="col debug d-flex justify-content-center align-items-center">2</div>
-          <div class="col debug d-flex justify-content-center align-items-center">3</div>
-          <div class="col debug d-flex justify-content-center align-items-center">4</div>
-          <div class="col debug d-flex justify-content-center align-items-center">5</div>
-          <div class="col debug d-flex justify-content-center align-items-center">6</div>
+          <div class="col">
+            <div class="card-cst w-100 py-3">
+              <div class="position-relative">
+                <img class="w-100 rounded-3" src="img/cabin.png" alt="">
+                <div class="overlay w-100 rounded-3">
+                  <i class="fa-solid fa-plus"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card-cst w-100 py-3">
+              <div class="position-relative">
+                <img class="w-100 rounded-3" src="img/cake.png" alt="">
+                <div class="overlay w-100 rounded-3">
+                  <i class="fa-solid fa-plus"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card-cst w-100 py-3">
+              <div class="position-relative">
+                <img class="w-100 rounded-3" src="img/circus.png" alt="">
+                <div class="overlay w-100 rounded-3">
+                  <i class="fa-solid fa-plus"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card-cst w-100 py-3">
+              <div class="position-relative">
+                <img class="w-100 rounded-3" src="img/game.png" alt="">
+                <div class="overlay w-100 rounded-3">
+                  <i class="fa-solid fa-plus"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card-cst w-100 py-3">
+              <div class="position-relative">
+                <img class="w-100 rounded-3" src="img/safe.png" alt="">
+                <div class="overlay w-100 rounded-3">
+                  <i class="fa-solid fa-plus"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card-cst w-100 py-3">
+              <div class="position-relative">
+                <img class="w-100 rounded-3" src="img/submarine.png" alt="">
+                <div class="overlay w-100 rounded-3">
+                  <i class="fa-solid fa-plus"></i>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -77,7 +131,7 @@
           <div class="section-top text-center">
             <h2>ABOUT</h2>
 
-            <div class="star position-relative w-100 text-center">
+            <div class="star position-relative w-100 text-center py-2">
               <div class="line-star before"></div>
               <i class="fa-solid fa-star"></i>
               <div class="line-star after"></div>
@@ -103,7 +157,7 @@
           <div class="section-top text-center">
             <h2>CONTACT ME</h2>
 
-            <div class="star position-relative w-100 text-center">
+            <div class="star position-relative w-100 text-center py-2">
               <div class="line-star before"></div>
               <i class="fa-solid fa-star"></i>
               <div class="line-star after"></div>
