--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
               </div>
             </div>
           </div>
+
           <div class="col">
             <div class="card-cst w-100 py-3">
               <div class="position-relative">
@@ -79,6 +80,7 @@
               </div>
             </div>
           </div>
+
           <div class="col">
             <div class="card-cst w-100 py-3">
               <div class="position-relative">
@@ -89,6 +91,7 @@
               </div>
             </div>
           </div>
+
           <div class="col">
             <div class="card-cst w-100 py-3">
               <div class="position-relative">
@@ -99,6 +102,7 @@
               </div>
             </div>
           </div>
+
           <div class="col">
             <div class="card-cst w-100 py-3">
               <div class="position-relative">
@@ -109,6 +113,7 @@
               </div>
             </div>
           </div>
+
           <div class="col">
             <div class="card-cst w-100 py-3">
               <div class="position-relative">
@@ -139,11 +144,14 @@
   
           </div>
           <div class="row row-cols-1 row-cols-md-2 text-start">
-            <div class="col debug">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt facilis repellat tenetur quibusdam iusto alias nihil, et quia, ducimus ipsa eius explicabo delectus tempore quo dicta eum saepe voluptatibus debitis ad esse, commodi sequi. Pariatur maxime quaerat, iste voluptate culpa sed esse reiciendis explicabo nemo recusandae sunt ad, eaque expedita?</div>
-            <div class="col debug">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt voluptatem alias velit commodi eaque exercitationem, nulla necessitatibus. Excepturi veritatis odio aut, magnam ratione, beatae iure veniam molestias nulla non, officiis provident quaerat ducimus? Et voluptate necessitatibus labore! Totam, sed quas veniam voluptas eveniet non cumque corrupti nemo, nulla ab ipsa!</div>
+            <div class="col my-3">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</div>
+            <div class="col my-3">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</div>
           </div>
           <div class="text-center">
-            <button class="btn btn-outline-light">Ic Download</button>
+            <button class="btn btn-outline-light my-3">
+              <i class="fa-solid fa-download me-1"></i>
+              <span>Download</span>  
+            </button>
           </div>
         </div>
       </div>
