--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <section id="contact-me" class="pt-4 pb-3 pt-md-5 pb-md-4">
       <div class="container-cst">
         <div class="container-fluid">
-          <div class="section-top text-center">
+          <div class="text-center">
             <h2>CONTACT ME</h2>
 
             <div class="star position-relative w-100 text-center py-2">
@@ -170,13 +170,17 @@
               <i class="fa-solid fa-star"></i>
               <div class="line-star after"></div>
             </div>
+          </div>
 
-          </div>
-          <div class="container-cst">
-            <div class="debug">
-              FORM
-            </div>
-          </div>
+          <form action="#">
+            <input type="text" class="form-control input-cst py-3" placeholder="Name">
+            <input type="email" class="form-control input-cst py-3" placeholder="Email Address">
+            <input type="text" class="form-control input-cst py-3" placeholder="Phone Number">
+            <textarea name="" id="" cols="30" rows="6" placeholder="Message" class="form-control input-cst py-3"></textarea>
+
+            <button class="btn btn-succes mt-3 button-cst">Send</button>
+          </form>
+                    
         </div>
       </div>
     </section>
