[fix]: all margin

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
 
         </div>
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3">
           <div class="col">
             <div class="card-cst w-100 py-3">
               <div class="position-relative">
@@ -177,29 +177,64 @@
             <input type="email" class="form-control input-cst py-3" placeholder="Email Address">
             <input type="text" class="form-control input-cst py-3" placeholder="Phone Number">
             <textarea name="" id="" cols="30" rows="6" placeholder="Message" class="form-control input-cst py-3"></textarea>
-
-            <button class="btn btn-succes mt-3 button-cst">Send</button>
+            <button type="submit" class="btn button-cst mt-3">Send</button>
           </form>
                     
         </div>
       </div>
     </section>
-    <!-- CONTACT ME -->
+    <!-- end CONTACT ME -->
   </main>
 
   <footer>
     <section class="footer-top py-4">
       <div class="container">
         <div class="row row-cols-1 row-cols-md-3">
-          <div class="col text-center debug">1</div>
-          <div class="col text-center debug">2</div>
-          <div class="col text-center debug">3</div>
+          <div class="col d-flex flex-column text-center  my-3">
+            <span>LOCATION</span>
+            <span>2215 John Daniel Drive Clark, MO 54243</span>
+          </div>
+
+          <div class="col d-flex flex-column align-items-center my-3">
+            <span>AROUND THE WEB</span>
+            <nav>
+              <ul class="list-unstyled d-flex mt-2">
+                <li class="mx-2">
+                  <a href="">
+                    <i class="fa-brands fa-facebook-f border border-light rounded-circle text-center"></i>
+                  </a>
+                </li>
+                <li class="mx-2">
+                  <a href="#" >
+                    <i class="fa-brands fa-google-plus-g border border-light rounded-circle text-center"></i>
+                  </a>
+              </li>
+                <li class="mx-2">
+                  <a href="#" >
+                    <i class="fa-brands fa-twitter border border-light rounded-circle text-center"></i>
+                  </a>
+                </li>
+                <li class="mx-2">
+                  <a href="#" >
+                    <i class="fa-brands fa-linkedin-in border border-light rounded-circle text-center"></i>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="col d-flex flex-column align-items-center my-3">
+            <span>ABOUT FREELANCER</span>
+            <p class="text-center">
+              Freelance is a free accordion use, open source Bootstrap theme created by <a href="#">Start Bootstrap.</a>
+            </p>
+          </div>
         </div>
       </div>
     </section>
 
     <section class="footer-bottom text-center pt-4">
-      <span class="pt-2">Copyright X Your Website 2019</span>
+      <div class="pt-2">Copyright <i class="fa-regular fa-copyright"></i> Your Website 2019</div>
     </section>
   </footer>
   
