--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <title>Bootstrap Freelancer</title>
 </head>
 <body>
-  <header class="d-flex align-items-center w-100 position-fixed z-3">
+  <header class="d-flex align-items-center fixed-top">
     <div class="container">
       <!-- <div class="row h-100 d-flex align-items-center row-cols-2">
         <div class="col">START BOOSTRAP</div>
